src/styles/less/MissionControl.less
@import '~antd/dist/antd.less';
@import '~antd/lib/style/themes/default.less';

.mission-container {
  height: 73vh;
}

.main-row {
  height: 100%;
}

.read .image-and-text-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.write .image-and-text-container {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.draw .image-and-text-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.read {
  background: #b5d33d;
}

.checking-box {
  position: absolute;
  top: 20px;
  right: 20px;
}

.draw-checking-box {
  position: absolute;
  top: 52%;
  right: 20px;
}

.read,
.mission-control-text {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-size: 4rem;
  color: #292929;
}

.write {
  background: #eb7d5b;
  height: 50%;
}

.write,
.mission-control-text {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.draw {
  background: #fed23f;
  height: 50%;
}

.draw,
.mission-control-text {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.checking-box {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
}

